# victron-mqtt-monitor

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
.github/: release.yml
victron_mqtt_monitor/: bootloader.py  constants.py  interfaces.py  main.py  settings.py  utils.py
victron_mqtt_monitor/alerts/: __init__.py  base.py  victron.py
victron_mqtt_monitor/api/: __init__.py
victron_mqtt_monitor/api/v1/: __init__.py
victron_mqtt_monitor/api/v1/endpoints/: __init__.py  foo.py
victron_mqtt_monitor/clients/: mqtt_client.py  tapo_client.py
victron_mqtt_monitor/localization/packs/: en.yaml  ro.yaml
victron_mqtt_monitor/monitors/: base.py  victron_monitor.py
victron_mqtt_monitor/notifiers/: __init__.py  base.py  email_notifier.py
victron_mqtt_monitor/notifiers/templates/: email.html
